[package]
name = "gemini"
version = "0.1.0"
authors = ["Honza Pokorny <me@honza.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webpki = "0.21.0"
webpki-roots = "0.20"

[dependencies.rustls]
version = "0.18.1"
features = ["dangerous_configuration"]
